2013-09-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components_form_common.php,
	godmode/modules/manage_network_components_form.php: fixed the
	javascript to configure the form of snmp.
	
	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager_editor_common.php: fixed the
	"module_macros" when it is fail when is not set for example.

2013-09-24  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: Added
	error message when try to add a new SLA item without configure
	parameters

2013-09-24  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/javascript/jquery.pandora.js
	images/license_key.png
	general/login_help_dialog.php
	general/login_page.php: Change the visual styles
	of some dialogs

	* extensions/agents_modules.php
	extensions/module_groups.php: Improve the visual
	style of extensions and their legends

2013-09-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager.php,
	extensions/update_manager/main.php: more comments for to make more
	easy the code.
	
	* extensions/update_manager/update_pandora.php: fixed lost include
	graph functions for to show progress bar.

2013-09-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fix groups in tree way
	when All group is not exist

2013-09-22  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alert_config.php: Translated new sentences.
	
2013-09-22  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_module_macros.php,
	include/help/ja/help_alert_macros.php: Translated new sentences.

2013-09-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php
	godmode/alerts/alert_list.builder.php: Fix the alerts creation
	to allow create an alert with default action. bug #2353
	Improve default actions string too.
